<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OStack Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="image">Image</string>
    <string name="instanceCount">Instance count</string>
    <string name="profiles">Profiles</string>
    <string name="mainTitle"></string>
     <string name="action_new_profile">New profile</string>
     <string name="btn_save">Save</string>
     <string name="btn_cancel">Cancel</string>
     <string name="profileName">Profile name</string>
     <string name="endpoint">Api Endpoint</string>
     <string name="username">Username</string>
     <string name="password">Password</string>
     <string name="tenantName">Tenant name</string>
     <string name="nameProfileEmpty">The profile name is required</string>
     <string name="edit">Edit</string>
     <string name="delete">Delete</string> 
     <string name="invalidUser">Invalid user / password </string>
     <string name="invalidEndpoint">Invalid endpoint</string>
     <string name="login_error">The login process has failed. Try again later</string>
     <string name="logging">Logging...</string>
     <string name="title_dialog_no_connectivity">Atention</string>
     <string name="dialog_no_connectivity">There is not a internet available connection. Please chek your internet connection</string>
     <string name="instance_name">Instance name: </string>
     <string name="instance_name_title">Instance name</string>
     <string name="uptime">uptime</string>
     <string name="image_name">Image name: </string>
     <string name="volume_name">Volume name:</string>
     <string name="volume_description">Description:</string>
     <string name="bootable">Bootable:</string>
     <string name="volume_type">Volume type:</string>
     <string name="private_ip_number">Private Ip addresses: </string>
     <string name="public_ip_number">Public Ip addresses: </string>
     <string name="status">Status:</string>
     <string name="created">Created:</string>
     <string name="updated">Updated:</string>
     <string name="securityGroup_name">SecurityGroup:</string>
     <string name="key_name">Key: </string>
     <string name="availability_zone">Availability Zone:</string>
     <string name="dataLoadError">It could not be to retrieve data from server. Try again later</string>
     <string name="instanceDetail">Instance Detail</string>
     <string name="imageDetail">Image Detail</string>
     <string name="size">Size:</string>
     <string name="name">Name</string>
     <string name="nameForm">Name:</string>
     <string name="satus">Status</string>
     <string name="flavor">Flavor:</string>
     <string name="newInstance">New Instance</string>
     <string name="deleteIntance">Delete</string>
     <string name="launchInsance">Launch</string>
     <string name="stopInstance">Stop</string>
     <string name="btn_create">Create</string>
     <string name="volumeType">Volume Type:</string>
     <string name="availabilityZone">Availability Zone:</string>
     <string name="instanceNameValidation">The instance name field is required</string>
     <string name="volumeNameValidation">The volume name field is required</string>
     <string name="volumeSizeValidation">The volume size field is required</string>
     <string name="errorToCreateInstance">Error to create the instance. Try again later</string>
     <string name="errorToCreateVolume">Error to create the volume. Try again later</string>
     <string name="errorToStartInsntance">Error to start the instance. Try again later</string>
     <string name="errorToStopInstance">Error to stop the instance. Try again later</string>
     <string name="errorToDeleteInstance">Error to delete the instance. Try again later</string>
     <string name="errorToDeleteVolume">Error to delete the volume. Try again later</string>
     <string name="instances">Instances</string>
     <string name="vcpus">VCPUs</string>
     <string name="ram">RAM</string>
     <string name="floatingIps">Floating IPs</string>
     <string name="SecurityGroups">Security Groups</string>
     <string name="volumes">Volumes</string>
     <string name="volumeStorage">Volume Storage</string>
     <string name="used">Used</string>
     <string name="of">of</string>
     <string name="limitSumnary">Limit Summary</string>
     <string name="usageSummary">Usage Summary</string>
     <string name="limits">Limits</string>
     <string name="usage">Usage</string>
     <string name="startDate">Start date</string>
     <string name="endDate">End date</string>
     <string name="activeInstances">Active Instances:</string>
     <string name="activeRam">Active RAM:</string>
     <string name="vcpuHours">This Period\'s VCPU-Hours:</string>
     <string name="gbHours">This Period\'s GB-Hours:</string>
     <string name="submit">Submit</string>
     <string name="loading">Loading...</string>
     <string name="requiredDate">The start and end date are required</string>
     <string name="drawer_open"></string>
     <string name="drawer_close"></string>
     <string name="newVolume">New Volume</string>
     <string name="volumeDetail">Volume Detail</string>
     

</resources>
