<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <EditText
        android:id="@+id/etV_profileName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/profileName" />

    <EditText
        android:id="@+id/etV_endpoint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endpoint" />

    <EditText
        android:id="@+id/etV_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etV_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/etV_tenantName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tenantName" />

</LinearLayout>