<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/startDate" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/endDate" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/edT_startDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:focusable="false" />

        <EditText
            style="@style/fontP1"
            android:id="@+id/edT_endDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="date"
            android:focusable="false" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btn_submit" 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/submit"/>
    
    <TextView 
        style="@style/fontH1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/usageSummary"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/fontP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/activeInstances"
            android:textStyle="bold" />

        <TextView
            style="@style/fontP1"
            android:id="@+id/txV_activeIntances"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/fontP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/activeRam"
            android:textStyle="bold" />

        <TextView
            style="@style/fontP1"
            android:id="@+id/txV_activeRAM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/fontP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/vcpuHours"
            android:textStyle="bold" />

        <TextView
            style="@style/fontP1"
            android:id="@+id/txV_VCPUHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            style="@style/fontP1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/gbHours"
            android:textStyle="bold" />

        <TextView
            style="@style/fontP1"
            android:id="@+id/txV_GBHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/table_background"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title_table_background"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
               	android:id="@+id/txV_title1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/instance_name_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txV_title2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/uptime"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ProgressBar
                android:id="@+id/pgB_laodInstance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

            <ListView
                android:id="@+id/lsV_table"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
            </ListView>
        </FrameLayout>
    </LinearLayout>

</LinearLayout>