<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/table_background" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/title_table_background"
        android:padding="5dp"
        android:text="@string/instanceDetail"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:paddingBottom="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- Instance name row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/instance_name" />

                <TextView
                    android:id="@+id/txV_instanceNameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="name" />
            </LinearLayout>

            <!-- Image name row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/image_name" />

                <TextView
                    android:id="@+id/txV_imageName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="image" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/flavor" />

                <TextView
                    android:id="@+id/txV_flavor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="image" />
            </LinearLayout>

            <!-- Key name row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/key_name" />

                <TextView
                    android:id="@+id/txV_keyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="image" />
            </LinearLayout>

            <!-- SecurityGroup name row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/securityGroup_name" />

                <TextView
                    android:id="@+id/txV_securityGroupName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Security" />
            </LinearLayout>

            <!-- Availability Zone row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/availability_zone" />

                <TextView
                    android:id="@+id/txV_availabilityZone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nova" />
            </LinearLayout>

            <!-- Status row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/status" />

                <TextView
                    android:id="@+id/txV_statusDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Shutoff" />
            </LinearLayout>

            <!-- Private Ip addresses row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/private_ip_number" />

                <TextView
                    android:id="@+id/txV_privateIpAddresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10.0.0.1" />
            </LinearLayout>

            <!-- Public Ip addresses row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/public_ip_number" />

                <TextView
                    android:id="@+id/txV_publicIpAddresses"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="180.1.1.1" />
            </LinearLayout>

            <!-- Created row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/created" />

                <TextView
                    android:id="@+id/txV_created"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12/03/2014" />
            </LinearLayout>

            <!-- Updated row -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp" >

                <TextView
                    style="@style/detailTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:text="@string/updated" />

                <TextView
                    android:id="@+id/txV_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="15/03/2014" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>